--- a/src/scss/blocks/_repair.scss
+++ b/src/scss/blocks/_repair.scss
@@ -38,10 +38,12 @@
         border: 1px solid transparent;
         overflow: hidden;
         margin-top: 20px;
+        padding: 0 10px;
+        padding-bottom: 20px;
     }
 
     &-cards{
-        margin: 24px 20px 40px 0px;
+        // margin: 24px 20px 40px 0px;
 
         &__button{
             display: flex;
@@ -60,7 +62,6 @@
         @media(min-width: 564px){
             &__button{
                 width: 240px !important;
-                margin-right: 20px;
         
                 &:hover{
                     transform: scale(1.1);
@@ -101,9 +102,9 @@
             justify-content: space-around;
             flex-wrap: wrap;
             height: 150px;
-            margin-bottom: 15px;
-            margin-left: 20px;
-            margin-right: 0px;
+            // margin-bottom: 15px;
+            // margin-left: 20px;
+            // margin-right: 0px;
             transition: height;
             transition-duration: 0.7s;
             transition-timing-function: ease-in;
